--- a/core/pubspec.yaml
+++ b/core/pubspec.yaml
@@ -8,7 +8,11 @@ environment:
 
 # dependencies:
 #   path: ^1.8.0
+dependencies:
+  json_annotation: ^4.0.1
 
 dev_dependencies:
   pedantic: ^1.10.0
   test: ^1.16.0
+  build_runner: ^2.0.0
+  json_serializable: ^4.0.0
