--- a/core/pubspec.yaml
+++ b/core/pubspec.yaml
@@ -16,4 +16,5 @@ dev_dependencies:
   pedantic: ^1.10.0
   test: ^1.16.0
   build_runner: ^2.0.0
+  # required for json code auto-generation
   json_serializable: ^4.0.0
