--- a/android/android/app/build.gradle
+++ b/android/android/app/build.gradle
@@ -33,8 +33,7 @@ android {
     }
 
     defaultConfig {
-        // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "com.tambapps.p2p.chat.android.android"
+        applicationId "com.tambapps.p2p.chat.android"
         minSdkVersion 16
         targetSdkVersion 30
         versionCode flutterVersionCode.toInteger()
