--- a/android/pubspec.yaml
+++ b/android/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   args: ^2.1.1
   meta: ^1.3.0
   wifi_info_flutter: ^2.0.2
+  google_fonts: ^2.0.0
 
 dev_dependencies:
   flutter_test:
