--- a/android/pubspec.yaml
+++ b/android/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   meta: ^1.3.0
   wifi_info_flutter: ^2.0.2
   google_fonts: ^2.0.0
+  device_info: ^2.0.2
 
 dev_dependencies:
   flutter_test:
