--- a/android/android/app/src/main/AndroidManifest.xml
+++ b/android/android/app/src/main/AndroidManifest.xml
@@ -3,8 +3,8 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <application
         android:label="P2P Messenger"
-        android:icon="@drawable/appicon"
-        android:roundIcon="@drawable/appicon"
+        android:icon="@mipmap/appicon"
+        android:roundIcon="@mipmap/appicon"
         >
         <activity
             android:name=".MainActivity"
