--- a/android/android/app/src/main/AndroidManifest.xml
+++ b/android/android/app/src/main/AndroidManifest.xml
@@ -2,6 +2,10 @@
     package="com.tambapps.p2p.chat.android">
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.CHANGE_WIFI_MULTICAST_STATE"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
+    <!-- to be able to call NetworkInterface.getNetworkInterfaces() -->
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <!-- Provide required visibility configuration for API level 30 and above -->
     <queries>
