--- a/core/pubspec.yaml
+++ b/core/pubspec.yaml
@@ -11,7 +11,10 @@ environment:
 dependencies:
   json_annotation: ^4.3.0
   meta: ^1.7.0
+  udp: ^5.0.3
 
+# Run for code json generation
+# dart run build_runner build
 dev_dependencies:
   pedantic: ^1.10.0
   test: ^1.16.0
